stripe payment server side done

--- a/server/.env.example
+++ b/server/.env.example
@@ -14,3 +14,8 @@ JWT_SECRET =  your jwt secret key
 CLOUD_NAME =  your cloudinary name
 CLOUDINARY_API_KEY =  your cloudinary API key
 CLOUDINARY_API_SECRET = your cloudinary API secret key
+
+
+#stripe secret key
+
+STRIPE_SECRET_KEY =  your stripe secret key
