--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "stripe": "^12.12.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
