stripe payment client side done

--- a/server/.env.example
+++ b/server/.env.example
@@ -19,3 +19,4 @@ CLOUDINARY_API_SECRET = your cloudinary API secret key
 #stripe secret key
 
 STRIPE_SECRET_KEY =  your stripe secret key
+STRIPE_PUBLISHABLE_KEY= your stripe publishable key
