--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
