--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "apexcharts": "^3.41.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
@@ -31,6 +32,7 @@
     "init": "^0.1.2",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
