--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
+    "timeago.js": "^4.0.0-beta.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
