--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.11",
     "timeago.js": "^4.0.0-beta.3",
     "typescript": "^4.9.5",
@@ -72,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@types/socket.io-client": "^3.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
