otp send to mail done in both side

--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.9",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.2",
     "cookie-parser": "^1.4.6",
@@ -30,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.4",
     "stripe": "^12.12.0",
     "typescript": "^5.1.3"
   },
