--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon ./src/app.ts",
+    "start": "nodemon ./dist/app.js",
     "dev": "nodemon ./src/app.ts"
   },
   "keywords": [],
