--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4",
+    "socket.io": "^4.7.2",
     "stripe": "^12.12.0",
     "typescript": "^5.1.3"
   },
